k8s/manifests/01-simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: taskflow-simple-pod
  namespace: taskflow
  labels:
    app: taskflow
    version: v1
spec:
  containers:
  - name: backend
    image: taskflow-backend:1.0
    ports:
    - containerPort: 3000
      name: http
